--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,31 @@
     <string name="selecttime">Select a time</string>
     <string name="myaccount">My Account</string>
     <string name="mesg">Chat</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="number">Number</string>
+    <string name="email">Email</string>
+    <string name="notications">Notifications</string>
+    <string name="bookingstatus">Booking status:</string>
+    <string name="offerdetail">Offers details:</string>
+    <string name="bookingdate">Booking Date:</string>
+    <string name="totalbill">Total bill:</string>
+    <string name="orderdetails">Order details:</string>
+    <string name="bookingdetail">Booking Details</string>
+    <string name="title">Event Title</string>
+    <string name="servicetype">Service type:</string>
+    <string name="location">Location</string>
+    <string name="bookingconfirmation">Booking Confirmation</string>
+    <string name="reservation">Your reservation has been \n sent successfully</string>
+    <string name="cancel">Cancel Bookings</string>
+    <string name="canceltext">Cancel</string>
+    <string name="salons">Salons</string>
+    <string name="type">type</string>
+    <string name="salonsname">Salons Name</string>
+    <string name="eventname">Event Name</string>
+    <string name="offertitle">Offer title</string>
+    <string name="offerperiod">Offer period:</string>
+    <string name="from">From:</string>
+    <string name="booking">Booking</string>
+    <string name="cancelbooking">Cancel Booking</string>
 </resources>
