--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="dateformat">DD/MM/YYYY</string>
     <string name="nointernet">No Internet</string>
     <string name="ok">OK</string>
+    <string name="reset">Reset</string>
+    <string name="oldpassword">Old Password</string>
+    <string name="confirmpassword">Confirm Password</string>
 </resources>
