--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -12,6 +12,7 @@
     <string name="forgot"><u>نسيت رقمك السري؟</u></string>
     <string name="maploc">الرجاء تحديد موقعك على الخريطة</string>
     <string name="next">التالى</string>
+    <string name="update">تحديث</string>
     <string name="salons">صالونات</string>
     <string name="eventsservice">خدمة الأحداث</string>
     <string name="offers">عروض</string>
